# kura-api

./: Cargo.toml  README.md
examples/server/: main.rs
src/: classifier.rs  error.rs  health.rs  lib.rs  parser.rs  profiler.rs  release.rs  scorer.rs
src/api/: error.rs  mod.rs  recent.rs  search.rs  subscribe.rs  test.rs
src/health/: mod.rs
src/indexer/: mod.rs  recent.rs  search.rs
src/releases/: mod.rs  recent.rs  search.rs
src/server/: _routes.rs  helper.rs  mod.rs
src/server/routes/: mod.rs  recent.rs  search.rs  test.rs
