[package]
name = "kura-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.88"
axum = { version = "0.8.1", optional = true, features = ["macros"] }
chrono = { version = "0.4.40", features = ["serde"] }
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = "1.44.1"
tokio-stream = "0.1.17"
tracing = "0.1.41"
uuid = { version = "1.16.0", features = ["v4"] }

[features]
server = ["axum"]
all = ["server"]
